Manage Course Form

--- a/WP/WP.csproj
+++ b/WP/WP.csproj
@@ -138,6 +138,9 @@
     <EmbeddedResource Include="Course Form\EditCourseForm.resx">
       <DependentUpon>EditCourseForm.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Course Form\ManageCourseForm.resx">
+      <DependentUpon>ManageCourseForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Course Form\RemoveCourseForm.resx">
       <DependentUpon>RemoveCourseForm.cs</DependentUpon>
     </EmbeddedResource>
