--- a/WP/WP.csproj
+++ b/WP/WP.csproj
@@ -74,23 +74,29 @@
     <Compile Include="Course Form\ManageCourseForm.Designer.cs">
       <DependentUpon>ManageCourseForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Course Form\PrintCourseForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Course Form\PrintCourseForm.Designer.cs">
+      <DependentUpon>PrintCourseForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Course Form\RemoveCourseForm.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Course Form\RemoveCourseForm.Designer.cs">
       <DependentUpon>RemoveCourseForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="Main Form\StaticsForm.cs">
+    <Compile Include="Student Form\StaticsForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Main Form\StaticsForm.Designer.cs">
+    <Compile Include="Student Form\StaticsForm.Designer.cs">
       <DependentUpon>StaticsForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="Main Form\PrintForm.cs">
+    <Compile Include="Student Form\PrintStudentForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Main Form\PrintForm.Designer.cs">
-      <DependentUpon>PrintForm.cs</DependentUpon>
+    <Compile Include="Student Form\PrintStudentForm.Designer.cs">
+      <DependentUpon>PrintStudentForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Student Form\AddStudentForm.cs">
       <SubType>Form</SubType>
@@ -98,10 +104,10 @@
     <Compile Include="Student Form\AddStudentForm.Designer.cs">
       <DependentUpon>AddStudentForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="Main Form\LoginForm.cs">
+    <Compile Include="LoginForm\LoginForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Main Form\LoginForm.Designer.cs">
+    <Compile Include="LoginForm\LoginForm.Designer.cs">
       <DependentUpon>LoginForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Main Form\MainForm.cs">
@@ -113,10 +119,10 @@
     <Compile Include="Database\MY_DB.cs" />
     <Compile Include="Classes\Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Main Form\RegisterForm.cs">
+    <Compile Include="LoginForm\RegisterForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Main Form\RegisterForm.Designer.cs">
+    <Compile Include="LoginForm\RegisterForm.Designer.cs">
       <DependentUpon>RegisterForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Classes\Student.cs" />
@@ -141,19 +147,22 @@
     <EmbeddedResource Include="Course Form\ManageCourseForm.resx">
       <DependentUpon>ManageCourseForm.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Course Form\PrintCourseForm.resx">
+      <DependentUpon>PrintCourseForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Course Form\RemoveCourseForm.resx">
       <DependentUpon>RemoveCourseForm.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Main Form\PrintForm.resx">
-      <DependentUpon>PrintForm.cs</DependentUpon>
+    <EmbeddedResource Include="Student Form\PrintStudentForm.resx">
+      <DependentUpon>PrintStudentForm.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Main Form\StaticsForm.resx">
+    <EmbeddedResource Include="Student Form\StaticsForm.resx">
       <DependentUpon>StaticsForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Student Form\AddStudentForm.resx">
       <DependentUpon>AddStudentForm.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Main Form\LoginForm.resx">
+    <EmbeddedResource Include="LoginForm\LoginForm.resx">
       <DependentUpon>LoginForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Main Form\MainForm.resx">
@@ -168,7 +177,7 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="Main Form\RegisterForm.resx">
+    <EmbeddedResource Include="LoginForm\RegisterForm.resx">
       <DependentUpon>RegisterForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Student Form\StudentListForm.resx">
